# storage-strategist

./: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  GEMINI.md  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  implementation_task.yml  maintainer_override.yml  maintenance.yml  ops_incident.yml
.github/scripts/: validate_contribution_guardrails.py
.github/workflows/: ci.yml  contribution-guardrails.yml
apps/desktop/: README.md
apps/desktop/src/: App.tsx  api.ts  types.ts
apps/desktop/src-tauri/src/: main.rs
apps/desktop/tests/: smoke.spec.ts
crates/cli/src/: main.rs
crates/core/src/: history.rs  lib.rs  model.rs  planner.rs  policy.rs  recommend.rs  reports.rs  scan.rs
crates/core/src/analyzers/: dev_artifacts.rs  mod.rs  system_caches.rs  trend_analyzer.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs  service.rs
