[package]
name = "storage-strategist-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
storage-strategist-core = { path = "../core" }
uuid.workspace = true

[dev-dependencies]
tempfile = "3.16"
